using AJAX to render html static content with XMLHttpRequest

--- a/assets/contacto.html
+++ b/assets/contacto.html
@@ -1,6 +1,8 @@
-<h1>Contactos</h1>
+<h1>Contacto</h1>
 <p>
-  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo quod voluptates similique? Reprehenderit iste unde repudiandae voluptatem optio aperiam eum perferendis praesentium nobis? Ipsam quidem sint, cum porro voluptate eaque.
+  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo quod voluptates
+  similique? Reprehenderit iste unde repudiandae voluptatem optio aperiam eum
+  perferendis praesentium nobis? Ipsam quidem sint, cum porro voluptate eaque.
 </p>
 
-<img src="https://dummyimage.com/720x480" alt="Contactos">
+<img src="https://dummyimage.com/720x480" alt="Contactos" />
