--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="shortcut icon"
+      href="https://alefra88.github.io/portfolio-mar-2023/assets/ico.jpg?v=2"
+      type="image/x-icon"
+    />
+    <link
+      rel="favicon"
+      href="https://alefra88.github.io/portfolio-mar-2023/assets/ico.jpg?v=2"
+    />
     <title>sitio con AJAX</title>
   </head>
   <body>
@@ -19,7 +29,7 @@
           <a href="./assets/home.html">Home</a>
           <a href="./assets/acerca.html">Acerca</a>
           <a href="./assets/servicios.html">Servicios</a>
-          <a href="./assets/contactos.html">Contacto</a>
+          <a href="./assets/contacto.html">Contacto</a>
         </nav>
       </section>
     </header>
@@ -27,5 +37,6 @@
     <footer class="footer container">
       <p><small>Sitio diseñado por alefra88</small></p>
     </footer>
+    <script src="app.js"></script>
   </body>
 </html>
