include html with XLMHtppRequest Fetch Asyn/await

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       rel="favicon"
       href="https://alefra88.github.io/portfolio-mar-2023/assets/ico.jpg?v=2"
     />
-    <title>sitio con AJAX</title>
+    <title>Landing page with AJAX</title>
   </head>
   <body>
     <header class="header">
