add new paths and drag and drop api ex

--- a/include-html.html
+++ b/include-html.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <link
       rel="shortcut icon"
       href="https://alefra88.github.io/portfolio-mar-2023/assets/ico.jpg?v=2"
@@ -21,6 +21,6 @@
     <div data-include="assets/header.html"></div>
     <main class="container"></main>
     <div data-include="assets/footer.html"></div>
-    <script src="app.js"></script>
+    <script src="./apps/app.js"></script>
   </body>
 </html>
