--- a/uploader.html
+++ b/uploader.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Uploader con AJAX</title>
-  <link rel="stylesheet" href="style-uploader.css">
+  <link rel="stylesheet" href="./styles/style-uploader.css">
 </head>
 <body>
   <main>
     <input type="file" id="files" name="files" multiple>
   </main>
-<script src="app2.js"></script>
+<script src="./apps/app2.js"></script>
 </body>
 </html>
