--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <link
       rel="shortcut icon"
       href="https://alefra88.github.io/portfolio-mar-2023/assets/ico.jpg?v=2"
@@ -37,6 +37,6 @@
     <footer class="footer container">
       <p><small>Sitio diseñado por alefra88</small></p>
     </footer>
-    <script src="app.js"></script>
+    <script src="./apps/app.js"></script>
   </body>
 </html>
