--- a/formSubmit-AJAX-Fetch.html
+++ b/formSubmit-AJAX-Fetch.html
@@ -4,16 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/style-form.css">
+    <link rel="stylesheet" href="./styles/style-form.css" />
     <title>send form with AJAX Fetch and formSubmit</title>
   </head>
   <body>
-    <form
-      class="contact-form"
-      action="https://formsubmit.co/efra.rlz@gmail.com"
-      method="POST"
-      target="_blank"
-    >
+    <form class="contact-form">
       <legend>Envíanos tus comentarios</legend>
       <input
         type="text"
